# immich_ai

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: image_utils.rs  main.rs  model_registry.rs  models.rs
src/models/: face_detection.rs  face_recognition.rs  multilingual_clip.rs
upstream/machine-learning/patches/: 0002-target-gfx900-gfx1102.patch
