[package]
name = "immich_ml"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
env_logger = "0.11.0"
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0"
chinese_clip_rs = { git = "https://github.com/deadash/chinese_clip_rs.git", rev = "f8e4a8f4" }
ort = { version = "=2.0.0-rc.7", features = ["load-dynamic", "ndarray"] }
clap = { version = "4.4", features = ["derive", "env"] }
image = "0.24"
ndarray = "0.16"
tokenizers = "0.15"
lazy_static = "1.4"
imageproc = "0.23.0"
